<resources>
    <string name="app_name">Just Java</string>
    <string name="quantity">Quantity</string>
    <string name="_plus">+</string>
    <string name="_0">0</string>
    <string name="_less">-</string>
    <string name="order_summary">Order Summary</string>
    <string name="_0dollars">0$</string>
    <string name="order">Order</string>
    <string name="toppings">toppings</string>
    <string name="name">Name</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="type_your_name_here">Type your name here</string>
    <string name="total">Total is</string>
    <string name="thank_you">Thank You!</string>
</resources>
