<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:inputType="textCapWords"
            android:autofillHints="@string/type_your_name_here"
            android:hint="@string/type_your_name_here"/>

        <TextView
            android:id="@+id/toppings_label_text_view"
            style="@style/HeaderHeadStyle"
            android:text="@string/toppings"/>

        <CheckBox
            android:id="@+id/whipped_cream_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:text="@string/whipped_cream"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/chocolate_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:text="@string/chocolate"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/quantity_label_text_view"
            style="@style/HeaderHeadStyle"
            android:text="@string/quantity"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/plus_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:text="@string/_plus"
                android:layout_marginStart="8dp"
                android:padding="8dp"/>

            <TextView
                android:id="@+id/quantity_text_view"
                android:text="@string/_0"
                style="@style/HeaderHeadStyle"
                tools:layout_editor_absoluteX="2dp"
                tools:layout_editor_absoluteY="21dp" />

            <Button
                android:id="@+id/minus_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:text="@string/_less"
                android:padding="8dp"/>
        </LinearLayout>

        <TextView
            android:id="@+id/order_summary_label_text_view"
            style="@style/HeaderHeadStyle"
            android:text="@string/order_summary"/>

        <TextView
            android:id="@+id/price_text_view"
            style="@style/HeaderHeadStyle"
            android:text="@string/_0dollars" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/order" />
    </LinearLayout>
</ScrollView>